--- a/index.html
+++ b/index.html
@@ -21,56 +21,67 @@
     </header>
     <!-- Mission -->
     <div class="mission" id="mission">
-      <img src=".\resources\images\img-mission-background.jpg" alt="mission">
-      <h2>Our Mission</h2>
-      <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      <!-- <img src=".\resources\images\img-mission-background.jpg" alt="mission"> -->
+      <div class="mission-text">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
     </div>
     <!-- Featured Tea -->
-    <div class="featured">
-      <p>Tea of the Month</p>
-      <p>What's Steeping at The Tea Cozy?</p>
-      <div class="menu-item">
-        <img src=".\resources\images\img-berryblitz-sm.jpg" alt="Berry Blitz">
-        <span>Fall Berry Blitz Tea</span>
+    <div class="featured-menu">
+      <div class="menu-title">
+        <h2>Tea of the Month</h2>
+        <p>What's Steeping at The Tea Cozy?</p>
       </div>
-      <div class="menu-item">
-        <img src=".\resources\images\img-spiced-rum-sm.jpg" alt="Spiced Rum">
-        <span>Spiced Rum Tea</span>
+      <div class="menu-row row-one">
+        <div class="menu-item">
+          <img src=".\resources\images\img-berryblitz-sm.jpg" alt="Berry Blitz">
+          <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="menu-item">
+          <img src=".\resources\images\img-spiced-rum-sm.jpg" alt="Spiced Rum">
+          <span>Spiced Rum Tea</span>
+        </div>
+        <div class="menu-item">
+          <img src=".\resources\images\img-donut-sm.jpg" alt="Donuts">
+          <span>Seasonal Donuts</span>
+        </div>
       </div>
-      <div class="menu-item">
-        <img src=".\resources\images\img-donut-sm.jpg" alt="Donuts">
-        <span>Seasonal Donuts</span>
-      </div>
-      <div class="menu-item">
-        <img src=".\resources\images\img-myrtle-ave-sm.jpg" alt="Myrtle Ave">
-        <span>Myrtle Ave Tea</span>
-      </div>
-      <div class="menu-item">
-        <img src=".\resources\images\img-bedford-bizarre-sm.jpg" alt="Bedford Bizzare">
-        <span>Bedford Bizarre Tea</span>
+      <div class="menu-row row-two">
+        <div class="menu-item">
+          <img src=".\resources\images\img-myrtle-ave-sm.jpg" alt="Myrtle Ave">
+          <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="menu-item">
+          <img src=".\resources\images\img-bedford-bizarre-sm.jpg" alt="Bedford Bizzare">
+          <span>Bedford Bizarre Tea</span>
+        </div>
       </div>
     </div>
     <!-- Locations -->
     <div class="locations">
       <h2>Locations</h2>
-      <div class="downtown location">
-        <h3>Downtown</h3>
-        <p>384 West 4th St</p>
-        <p>Suite 108</p>
-        <p>Portland, Maine</p>
+      <div class="location-row">
+        <div class="location downtown">
+          <h3>Downtown</h3>
+          <p>384 West 4th St</p>
+          <p>Suite 108</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location east-bayside">
+          <h3>East Bayside</h3>
+          <p>3433 Phisherman's Avenue</p>
+          <p>(Northwest Corner)</p>
+          <p>Portland, Maine</p>
+        </div>
+        <div class="location oakdale">
+          <h3>Oakdale</h3>
+          <p>515 Crescent Avenue</p>
+          <p>Second Floor</p>
+          <p>Portland, Maine</p>
+        </div>        
       </div>
-      <div class="location east-bayside">
-        <h3>East Bayside</h3>
-        <p>3433 Phisherman's Avenue</p>
-        <p>(Northwest Corner)</p>
-        <p>Portland, Maine</p>
-      </div>
-      <div class="location oakdale">
-        <h3>Oakdale</h3>
-        <p>515 Crescent Avenue</p>
-        <p>Second Floor</p>
-        <p>Portland, Maine</p>
-      </div>
+
 
     </div>
     <!-- Footer -->
