what should be the final check-in

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <!--- Header -->
     <header>
-      <!-- Logo -->
+      <!-- Header Logo -->
       <div class="logo">
         <img src=".\resources\images\img-tea-cozy-logo.png" alt="Tea Cozy logo">
       </div>
-      <!-- Navigation -->
+      <!-- Header Navigation -->
       <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#featured">Featured Tea</a></span>
@@ -30,11 +30,14 @@
         </div>
       </div>
       <!-- Featured Tea -->
-      <div class="featured-menu">
+      <div class="featured-menu" id="featured">
         <div class="menu-title">
-          <h2 id="featured">Tea of the Month</h2>
+          <h2>Tea of the Month</h2>
           <p>What's Steeping at The Tea Cozy?</p>
         </div>
+        <!-- row sections and the menu items (graphic and label) in each
+         !    Note that graphics used for menu buttons are resized from the original 
+         !    original large version so webpage will load quicker                 -->
         <div class="menu-row row-one">
           <div class="menu-item">
             <img src=".\resources\images\img-berryblitz-sm.jpg" alt="Berry Blitz">
@@ -61,7 +64,7 @@
         </div>
       </div>
       <!-- Locations -->
-      <div class="locations">
+      <div class="locations" id="locations">
         <h2>Locations</h2>
         <div class="location-row">
           <div class="location downtown">
